--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sansita Swashed">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open Sans Semibold">
     <script type="text/javascript" src="bodymovin.min.js"></script>
     <script src="p5.js"></script>
     <script src="Tone.min.js" type="text/javascript"></script>
